# web-screen-stream

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  main.py
config/fluxbox/: apps  init
example/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
example/src/: App.tsx  H264Player.tsx  jmuxer.d.ts
instructions/: architecture.md  development.md  protocol.md
src/web_screen_stream/: __init__.py  config.py  ffmpeg_source.py  h264_extractor.py  session.py  xvfb.py
tests/: __init__.py  test_api.py  test_config.py  test_h264_extractor.py  test_session.py
